nea basin network